adjusted padding and spacing of all sections

--- a/index.html
+++ b/index.html
@@ -74,11 +74,14 @@
         </ul>
     </nav>
     <main class="container-fluid">
-            <section class="row min-vh-100">
-                <div class="col mt-5">
-                    <div class="c-section-container m-auto">
+            <section class="row min-vh-100 d-flex flex-column">
+                <div class="col c-section-wrapper d-flex flex-column justify-content-center c-translate-up-sm-2">
+                    <div class="c-section-container mx-auto c-image-holder">
+
+                    </div>
+                    <div class="c-section-container mx-auto mt-3">
                         <h1 class="my-0 mb-2">MARVIE GASATAYA</h1>
-                        <hr class="m-0 mb-2 c-hor-rule">
+                        <hr class="m-0 mb-2 c-hor">
                         <h3>FULL STACK DEVELOPER <span class="c-separator"></span> UI/UX DESIGNER</h3>
                         <p>Food Lover &bull; Artist &bull; D&D Player &bull; Programmer &bull; Idea Bringer 
                         <span class="c-p-extension">
@@ -87,19 +90,34 @@
                     </div>
                 </div>
             </section>
-            <section class="row min-vh-100">
-                <div class="col mt-5">
-                    <h2>PROJECTS</h2>
+            <section class="row min-vh-100 c-height mt-5">
+                <div class="col mt-5 c-section-wrapper d-flex flex-column justify-content-center">
+                    <div class="c-section-container mx-auto">
+                        <h2>PROJECTS</h2>
+                    </div>
+                    <div class="c-section-container mx-auto">
+
+                    </div>
                 </div>
             </section>
-            <section class="row min-vh-100">
-                <div class="col mt-5">
-                    <h2>TOOLS</h2>
+            <section class="row min-vh-100 c-height mt-5">
+                <div class="col mt-5 c-section-wrapper d-flex flex-column justify-content-center">
+                    <div class="c-section-container mx-auto">
+                        <h2>TOOLS</h2>
+                    </div>
+                    <div class="c-section-container mx-auto">
+
+                    </div>
                 </div>
             </section>
-            <section class="row min-vh-100">
-                <div class="col mt-5">
-                    <h2>CONTACT</h2>
+            <section class="row min-vh-100 c-height">
+                <div class="col mt-5 c-section-wrapper d-flex flex-column justify-content-center">
+                    <div class="c-section-container mx-auto">
+                        <h2>CONTACT</h2>
+                    </div>
+                    <div class="c-section-container mx-auto">
+
+                    </div>
                 </div>
             </section>
     </main>
