added styles for the nav bar

--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
                 <!-- START -->
                 <div class="c-nav-section-block">
                     <div class="c-nav-ico-block">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M0 0h24v24H0z" fill="none"/><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/></svg>
-                        
+                        <div class="c-svg-container">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/></svg>
+                        </div>
+                        <div class="c-dots"></div>
+                        <div class="c-dots"></div>
+                        <div class="c-dots"></div>
                     </div>
-                    <div class="c-nav-text-block">
+                    <div class="c-nav-text-block" style="display:none;">
                         <a href="#start">S</a> 
                     </div>
                 </div>
@@ -32,9 +36,14 @@
                 <!-- PROJECTS -->
                 <div class="c-nav-section-block">
                     <div class="c-nav-ico-block">
-
+                        <div class="c-svg-container">
+                            <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"  "><g><rect fill="none" height="24" width="24" x="0"/></g><g><g><g><path d="M20,7h-4V5c0-0.55-0.22-1.05-0.59-1.41C15.05,3.22,14.55,3,14,3h-4C8.9,3,8,3.9,8,5v2H4C2.9,7,2,7.9,2,9v11 c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V9C22,7.9,21.1,7,20,7z M10,5h4v2h-4V5z M11,18.5l-1-1l3-3l-3-3l1-1l4,4L11,18.5z"/></g></g></g></svg>
+                        </div>
+                        <div class="c-dots"></div>
+                        <div class="c-dots"></div>
+                        <div class="c-dots"></div>
                     </div>
-                    <div class="c-nav-text-block">
+                    <div class="c-nav-text-block" style="display:none;">
                         <a href="#projects">P</a>
                     </div>
                 </div>
@@ -43,9 +52,16 @@
                 <!-- TOOLS -->
                 <div class="c-nav-section-block">
                     <div class="c-nav-ico-block">
-
+                        <div class="c-svg-container">
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve">
+                            <path d="M15,14h-2v-3h2V8.5h2V11h6V4h-6v2.5h-2V4H9v2.5H7V4H1v7h6V8.5h2V11h2v3H9v7h6V14z"/>
+                            </svg>
+                        </div>
+                        <div class="c-dots"></div>
+                        <div class="c-dots"></div>
+                        <div class="c-dots"></div>
                     </div>
-                    <div class="c-nav-text-block">
+                    <div class="c-nav-text-block" style="display:none;">
                         <a href="#tools">T</a>
                     </div>
                 </div>
@@ -54,10 +70,15 @@
                 <!-- CONTACT -->
                 <div class="c-nav-section-block">
                     <div class="c-nav-ico-block">
-
+                        <div class="c-svg-container">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"/></svg>
+                        </div>
+                        <div class="c-dots"></div>
+                        <div class="c-dots"></div>
+                        <div class="c-dots"></div>
                     </div>
                     <div class="c-nav-text-block">
-                        <a href="#contact">C</a>
+                        <a href="#contact" style="display:none;">C</a>
                     </div>
                 </div>
             </li>
@@ -81,8 +102,8 @@
                     </div>
                     <div class="c-section-container mx-auto mt-3">
                         <h1 class="my-0 mb-2">MARVIE GASATAYA</h1>
-                        <hr class="m-0 mb-2 c-hor">
-                        <h3>FULL STACK DEVELOPER <span class="c-separator"></span> UI/UX DESIGNER</h3>
+                        <hr class="m-0 mb-2 c-hor-rule">
+                        <h3>FULL STACK DEVELOPER <span class="c-separator-content">|</span><span class="c-separator"></span> UI+UX DESIGNER</h3>
                         <p>Food Lover &bull; Artist &bull; D&D Player &bull; Programmer &bull; Idea Bringer 
                         <span class="c-p-extension">
                             &bull; Fantasy World Explorer <span class="c-p-extension"> </span>&bull; Al Pacino Fan &bull; Weird Sense of Humor &bull; Game Builder
