--- a/index.html
+++ b/index.html
@@ -15,94 +15,90 @@
 <body>
     <!-- <canvas id="bg"></canvas> -->
     <nav>
+        <!-- START NAV EFFECTS CONTAINER -->
+        <div class="c-nav-container m-0">
+            <ul class="c-nav-ul c-filter" >
+                <div class="c-dot-move"></div>
+                <div>
+                    <div class="c-major-dot c-svg-selected"></div>
+                    <div class="c-dots"></div>
+                    <div class="c-dots"></div>
+                    <div class="c-dots"></div>   
+                </div>
+                <div>
+                    <div class="c-major-dot"></div>
+                    <div class="c-dots"></div>
+                    <div class="c-dots"></div>
+                    <div class="c-dots"></div>   
+                </div>
+                <div>
+                    <div class="c-major-dot"></div>
+                    <div class="c-dots"></div>
+                    <div class="c-dots"></div>
+                    <div class="c-dots"></div>   
+                </div>
+                <div>
+                    <div class="c-major-dot"></div> 
+                </div>
+            </ul>
+        <!-- END NAV EFFECTS CONTAINER -->
+        <!-- FILTER SETTINGS -->
+            <svg>
+                <filter id="liquid">
+                    <feGaussianBlur in="SourceGraphic" stdDeviation="1"/>
+                    <feColormatrix values="
+                    1 0 0 0 0
+                    0 1 0 0 0
+                    0 0 1 0 0
+                    0 0 0 21 -19
+                    "/>
+                </filter>
+            </svg>
+        <!-- END FILTER SETTINGS -->
+        </div>
+        <!-- START NAV CONTENTS -->
         <div class="c-nav-container m-0">
             <ul class="c-nav-ul" >
-                <li class="c-nav-section">
-                    <!-- START -->
-                    <div class="c-nav-section-block">
-                        <div class="c-nav-ico-block">
-                            <a href="#" onclick="setSelected(0)">
-                                <div id="nav-start" class="c-svg-container c-svg-selected">
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/></svg>
-                                </div>
-                            </a>
-                            <div class="c-dots"></div>
-                            <div class="c-dots"></div>
-                            <div class="c-dots"></div>
-                        </div>
-                        <div class="c-nav-text-block" style="display:none;">
-                            <a href="#start">S</a> 
-                        </div>
+                <a href="#top" onclick="setSelected(0)">
+                    <div id="nav-start" class="c-svg-container-overlay c-svg-selected">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/></svg>
                     </div>
-                </li>
-                <li class="c-nav-section">
-                    <!-- PROJECTS -->
-                    <div class="c-nav-section-block">
-                        <div class="c-nav-ico-block">
-                            <a href="#projects" onclick="setSelected(1)">
-                                <div id="nav-projects" class="c-svg-container ">
-                                    <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"  ><g><rect fill="none" height="24" width="24" x="0"/></g><g><g><g><path d="M20,7h-4V5c0-0.55-0.22-1.05-0.59-1.41C15.05,3.22,14.55,3,14,3h-4C8.9,3,8,3.9,8,5v2H4C2.9,7,2,7.9,2,9v11 c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V9C22,7.9,21.1,7,20,7z M10,5h4v2h-4V5z M11,18.5l-1-1l3-3l-3-3l1-1l4,4L11,18.5z"/></g></g></g></svg>
-                                </div>
-                            </a>
-                            <div class="c-dots"></div>
-                            <div class="c-dots"></div>
-                            <div class="c-dots"></div>
-                        </div>
-                        <div class="c-nav-text-block" style="display:none;">
-                            <a href="#projects">P</a>
-                        </div>
+                    <!-- spacer -->
+                    <div class="c-dots-overlay"></div><div class="c-dots-overlay"></div><div class="c-dots-overlay"></div> 
+                    <!-- spacer -->
+                </a>
+                <a href="#projects" onclick="setSelected(1)">
+                    <div id="nav-projects" class="c-svg-container-overlay">
+                        <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"  ><g><rect fill="none" height="24" width="24" x="0"/></g><g><g><g><path d="M20,7h-4V5c0-0.55-0.22-1.05-0.59-1.41C15.05,3.22,14.55,3,14,3h-4C8.9,3,8,3.9,8,5v2H4C2.9,7,2,7.9,2,9v11 c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V9C22,7.9,21.1,7,20,7z M10,5h4v2h-4V5z M11,18.5l-1-1l3-3l-3-3l1-1l4,4L11,18.5z"/></g></g></g></svg>
                     </div>
-                </li>
-                <li class="c-nav-section">
-                    <!-- TOOLS -->
-                    <div class="c-nav-section-block">
-                        <div class="c-nav-ico-block">
-                            <a href="#tools" onclick="setSelected(2)">
-                                <div id="nav-tools" class="c-svg-container" >
-                                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve">
-                                    <path d="M15,14h-2v-3h2V8.5h2V11h6V4h-6v2.5h-2V4H9v2.5H7V4H1v7h6V8.5h2V11h2v3H9v7h6V14z"/>
-                                    </svg>
-                                </div>
-                            </a>
-                            <div class="c-dots"></div>
-                            <div class="c-dots"></div>
-                            <div class="c-dots"></div>
-                        </div>
-                        <div class="c-nav-text-block" style="display:none;">
-                            <a href="#tools">T</a>
-                        </div>
+                    <!-- spacer -->
+                    <div class="c-dots-overlay"></div><div class="c-dots-overlay"></div><div class="c-dots-overlay"></div> 
+                    <!-- spacer --> 
+                </a>
+                <a href="#tools" onclick="setSelected(2)">
+                    <div id="nav-tools" class="c-svg-container-overlay">
+                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                        viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve"><path d="M15,14h-2v-3h2V8.5h2V11h6V4h-6v2.5h-2V4H9v2.5H7V4H1v7h6V8.5h2V11h2v3H9v7h6V14z"/>
+                        </svg>
                     </div>
-                </li>
-                <li class="c-nav-section">
-                    <!-- CONTACT -->
-                    <div class="c-nav-section-block">
-                        <a href="#contact" onclick="setSelected(3)">
-                            <div class="c-nav-ico-block">
-                                <div id="nav-contact" class="c-svg-container">
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"/></svg>
-                                </div>
-                            </div>
-                        </a>
-                        <div class="c-nav-text-block">
-                            <a href="#contact" style="display:none;">C</a>
-                        </div>
+                    <!-- spacer -->
+                    <div class="c-dots-overlay"></div><div class="c-dots-overlay"></div><div class="c-dots-overlay"></div> 
+                    <!-- spacer --> 
+                </a>
+                <a href="#contact" onclick="setSelected(3)">
+                    <div id="nav-contact" class="c-svg-container-overlay">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"/></svg>
                     </div>
-                </li>
-                <li class="c-nav-section">
-                    <div class="c-nav-section-block">
-                        <div class="c-nav-ico-block">
-    
-                        </div>
-                        <div class="c-nav-text-block">
-                            <a href=""></a>
-                        </div>
-                    </div>
-                </li>
+                </a>
             </ul>
         </div>
+        <!-- END NAV CONTENTS -->
     </nav>
+    <!-- =================== -->
+    <!-- START MAIN CONTENTS -->
+    <!-- =================== -->
     <main class="container-fluid c-scroll-snap-container">
-            <section class="row min-vh-100 d-flex flex-column c-scroll-snap-child">
+            <section id="top" class="row min-vh-100 d-flex flex-column c-scroll-snap-child">
                 <div class="col c-section-wrapper d-flex flex-column justify-content-center c-translate-up-sm-2">
                     <div class="c-section-container mx-auto c-image-holder">
 
@@ -122,7 +118,7 @@
             <div class="c-spacer"></div>
             <div class="c-spacer"></div>
             <section class="row min-vh-100 c-scroll-snap-child">
-                <div class="col c-section-wrapper d-flex flex-column bg-primary justify-content-center">
+                <div class="col c-section-wrapper d-flex flex-column justify-content-center">
                     <div class="c-section-container mx-auto">
                         <h2 id="projects">PROJECTS</h2>
                     </div>
@@ -135,7 +131,7 @@
             <div class="c-spacer"></div>
             <div class="c-spacer"></div>
             <section class="row min-vh-100 c-scroll-snap-child">
-                <div class="col c-section-wrapper d-flex flex-column bg-primary justify-content-center">
+                <div class="col c-section-wrapper d-flex flex-column justify-content-center">
                     <div class="c-section-container mx-auto">
                         <h2 id="tools">TOOLS</h2>
                     </div>
@@ -148,7 +144,7 @@
             <div class="c-spacer"></div>
             <div class="c-spacer"></div>
             <section class="row min-vh-100 c-scroll-snap-child">
-                <div class="col c-section-wrapper d-flex flex-column bg-primary justify-content-center">
+                <div class="col c-section-wrapper d-flex flex-column">
                     <div class="c-section-container mx-auto">
                         <h2 id="contact">CONTACT</h2>
                     </div>
