binded dot movement to scroll bar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- START NAV EFFECTS CONTAINER -->
         <div class="c-nav-container m-0">
             <ul class="c-nav-ul c-filter" >
-                <div class="c-dot-move"></div>
+                <div id="moving-dot" class="c-dot-move"></div>
                 <div>
                     <div class="c-major-dot c-svg-selected"></div>
                     <div class="c-dots"></div>
@@ -97,7 +97,7 @@
     <!-- =================== -->
     <!-- START MAIN CONTENTS -->
     <!-- =================== -->
-    <main class="container-fluid c-scroll-snap-container">
+    <main id="scroll-container" class="container-fluid c-scroll-snap-container">
             <section id="top" class="row min-vh-100 d-flex flex-column c-scroll-snap-child">
                 <div class="col c-section-wrapper d-flex flex-column justify-content-center c-translate-up-sm-2">
                     <div class="c-section-container mx-auto c-image-holder">
