--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <!-- START NAV CONTENTS -->
         <div class="c-nav-container m-0">
             <ul class="c-nav-ul" >
-                <a href="#top" onclick="setSelected(0)">
+                <a href="#top" >
                     <div id="nav-start" class="c-svg-container-overlay c-svg-selected">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/></svg>
                     </div>
@@ -67,7 +67,7 @@
                     <div class="c-dots-overlay"></div><div class="c-dots-overlay"></div><div class="c-dots-overlay"></div> 
                     <!-- spacer -->
                 </a>
-                <a href="#projects" onclick="setSelected(1)">
+                <a href="#projects" >
                     <div id="nav-projects" class="c-svg-container-overlay">
                         <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"  ><g><rect fill="none" height="24" width="24" x="0"/></g><g><g><g><path d="M20,7h-4V5c0-0.55-0.22-1.05-0.59-1.41C15.05,3.22,14.55,3,14,3h-4C8.9,3,8,3.9,8,5v2H4C2.9,7,2,7.9,2,9v11 c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V9C22,7.9,21.1,7,20,7z M10,5h4v2h-4V5z M11,18.5l-1-1l3-3l-3-3l1-1l4,4L11,18.5z"/></g></g></g></svg>
                     </div>
@@ -75,7 +75,7 @@
                     <div class="c-dots-overlay"></div><div class="c-dots-overlay"></div><div class="c-dots-overlay"></div> 
                     <!-- spacer --> 
                 </a>
-                <a href="#tools" onclick="setSelected(2)">
+                <a href="#tools" >
                     <div id="nav-tools" class="c-svg-container-overlay">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                         viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve"><path d="M15,14h-2v-3h2V8.5h2V11h6V4h-6v2.5h-2V4H9v2.5H7V4H1v7h6V8.5h2V11h2v3H9v7h6V14z"/>
@@ -85,7 +85,7 @@
                     <div class="c-dots-overlay"></div><div class="c-dots-overlay"></div><div class="c-dots-overlay"></div> 
                     <!-- spacer --> 
                 </a>
-                <a href="#contact" onclick="setSelected(3)">
+                <a href="#contact" >
                     <div id="nav-contact" class="c-svg-container-overlay">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"/></svg>
                     </div>
