added container adjustment and placeholder photo

--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
     <!-- =================== -->
     <!-- START MAIN CONTENTS -->
     <!-- =================== -->
-    <main id="scroll-container" class="container-fluid c-scroll-snap-container">
+    <main id="scroll-container" class="container-fluid c-scroll-snap-container push-right">
             <section id="top" class="row min-vh-100 d-flex flex-column c-scroll-snap-child">
                 <div class="col c-section-wrapper d-flex flex-column justify-content-center c-translate-up-sm-2">
                     <div class="c-section-container mx-auto c-image-holder">
-
+                        <img src="./images/photo.jpg" alt="" class="c-photo">
                     </div>
                     <div class="c-section-container mx-auto mt-3">
                         <h1 class="my-0 mb-2">MARVIE GASATAYA</h1>
