adjusted fonts in project section

--- a/index.html
+++ b/index.html
@@ -129,21 +129,21 @@
                             <img class="card-img-top img-fluid" src="./images/projects/website.jpg" alt="Card image cap">
                             <div class="card-body">
                               <h3 class="card-text text-dark">Cebu Pet Match Website</h3>
-                              <p class="text-dark">Developed with PHP, MySql, Javascript, Jquery, HTML and CSS. An Online Pet Search Database.</p>
+                              <p class="text-dark mt-1">Developed with PHP, MySql, Javascript, Jquery, HTML and CSS. An Online Pet Search Database.</p>
                             </div>
                         </div>
                         <div class="card c-card mx-md-4 mt-4 mt-md-0">
                             <img class="card-img-top img-fluid" src="./images/projects/website2.jpg" alt="Card image cap">
                             <div class="card-body">
                               <h3 class="card-text text-dark">Healthy Eats Website</h3>
-                              <p class="text-dark">Front-End focused using HTML, CSS and Javascript. An online order form submisison website. </p>
+                              <p class="text-dark mt-1">Front-End focused using HTML, CSS and Javascript. An online order form submisison website. </p>
                             </div>
                         </div>
                         <div class="card c-card mt-4 mt-md-0">
                             <img class="card-img-top img-fluid" src="./images/projects/spaceshooter.jpg" alt="Card image cap">
                             <div class="card-body">
                               <h3 class="card-text text-dark">Space Shooter</h3>
-                              <p class="text-dark">Programmed with C# and developed in Unity. This links to a video demo of the space shooter game.</p>
+                              <p class="text-dark mt-1">Programmed with C# and developed in Unity. This links to a video demo of the space shooter game.</p>
                             </div>
                         </div>
                     </div>
