--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <!-- <canvas id="bg"></canvas> -->
+    <canvas id="bg"></canvas>
+    <canvas class="c-overlay"></canvas>
+    <canvas class="c-overlay2"></canvas>
     <nav>
         <!-- START NAV EFFECTS CONTAINER -->
         <div class="c-nav-container m-0">
@@ -213,8 +215,8 @@
                     </div>
                 </div>
     </main>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script> -->
-    <!-- <script type="module" src="./main.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+    <script type="module" src="./main.js"></script>
     <script  src="./js/nav.js"></script>
 
 </body>
