added links to the external pages and social media

--- a/index.html
+++ b/index.html
@@ -128,21 +128,27 @@
                     </div>
                     <div class="c-projects-body mx-auto d-md-flex">
                         <div class="card c-card " >
-                            <img class="card-img-top img-fluid" src="./images/projects/website.jpg" alt="Card image cap">
+                            <a href="https://cebupetmatch.xyz/" target="_blank">
+                                <img class="card-img-top img-fluid" src="./images/projects/website.jpg" alt="Cebu Pet match landing Page" >
+                            </a>
                             <div class="card-body">
                               <h3 class="card-text text-dark">Cebu Pet Match Website</h3>
                               <p class="text-dark mt-1">Developed with PHP, MySql, Javascript, Jquery, HTML and CSS. An Online Pet Search Database.</p>
                             </div>
                         </div>
                         <div class="card c-card mx-md-4 mt-4 mt-md-0">
-                            <img class="card-img-top img-fluid" src="./images/projects/website2.jpg" alt="Card image cap">
+                            <a href="https://marescanog.github.io/HealthyEats/" target="_blank">
+                                <img class="card-img-top img-fluid" src="./images/projects/website2.jpg" alt="Card image cap">
+                            </a>
                             <div class="card-body">
                               <h3 class="card-text text-dark">Healthy Eats Website</h3>
                               <p class="text-dark mt-1">Front-End focused using HTML, CSS and Javascript. An online order form submisison website. </p>
                             </div>
                         </div>
                         <div class="card c-card mt-4 mt-md-0">
-                            <img class="card-img-top img-fluid" src="./images/projects/spaceshooter.jpg" alt="Card image cap">
+                            <a href="https://www.youtube.com/watch?v=XQ7h9-hGzn0" target="_blank">
+                                <img class="card-img-top img-fluid" src="./images/projects/spaceshooter.jpg" alt="Card image cap">
+                            </a>
                             <div class="card-body">
                               <h3 class="card-text text-dark">Space Shooter</h3>
                               <p class="text-dark mt-1">Programmed with C# and developed in Unity. This links to a video demo of the space shooter game.</p>
@@ -191,25 +197,25 @@
                             <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
                         </div>
                         <div class="col-md-6 mt-2 my-2 push-up">
-                            <form action="" class="text-left">
+                            <form action="" class="d-flex flex-column">
                                 <div class="form-group">
                                     <label for="full-name-input">Full Name</label>
-                                    <input type="text" name="" id="full-name-input" class="form-control">
+                                    <input type="text" name="name" id="full-name-input" class="form-control">
                                 </div>
                                 <div class="form-group">
                                     <label for="email-input">Email Address</label>
-                                    <input type="email" name="" id="email-input" class="form-control">
+                                    <input type="email" name="email" id="email-input" class="form-control">
                                 </div>
                                 <div class="form-group">
                                     <label for="txt-txtarea">Message</label>
                                     <textarea name="textArea" id="txt-textarea" rows="5" class="form-control"></textarea>
                                 </div>
-                                <button class="btn btn-success btn-block mt-3">Send</button>
+                                <button class="btn btn-outline-light btn-block mt-3">Send</button>
                             </form>
                         </div>
                         <footer   class="p-2 mt-2 c-projects-body mx-auto footer-adjustment my-2 push-up">
                             <hr class="m-0 mb-2 c-hor-rule">
-                            <p class="text-center text-light m-0">Marvie Gasataya</p>
+                            <p class="text-center text-light m-0 c-name c-buttones">Marvie Gasataya <a href="https://www.facebook.com/MarvieEGasataya/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><rect fill="none" height="24" width="24"/><path d="M22,12c0-5.52-4.48-10-10-10S2,6.48,2,12c0,4.84,3.44,8.87,8,9.8V15H8v-3h2V9.5C10,7.57,11.57,6,13.5,6H16v3h-2 c-0.55,0-1,0.45-1,1v2h3v3h-3v6.95C18.05,21.45,22,17.19,22,12z"/></svg></a></p>
                             <p class="text-center text-light m-0">All Rights Reserved.</p>
                         </footer>
                     </div>
