added animation transition for title screen

--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
     <main id="scroll-container" class="container-fluid c-scroll-snap-container push-right">
             <section id="top" class="row min-vh-100 d-flex flex-column c-scroll-snap-child">
                 <div class="col c-section-wrapper d-flex flex-column justify-content-center c-translate-up-sm-2">
-                    <div class="c-section-container mx-auto c-image-holder">
+                    <div id="myimg" class="c-section-container mx-auto c-image-holder">
                         <img src="./images/photo.jpg" alt="" class="c-photo">
                     </div>
                     <div class="c-section-container mx-auto mt-3">
-                        <h1 class="my-0 mb-2">MARVIE GASATAYA</h1>
-                        <hr class="m-0 mb-2 c-hor-rule">
-                        <h3>FULL STACK DEVELOPER <span class="c-separator-content">|</span><span class="c-separator"></span> UI+UX DESIGNER</h3>
-                        <p>Food Lover &bull; Artist &bull; D&D Player &bull; Programmer &bull; Idea Bringer 
+                        <h1 id="myName"class="my-0 mb-2">MARVIE GASATAYA</h1>
+                        <hr id="myHr" class="m-0 mb-2 c-hor-rule">
+                        <h3 id="mytitle">FULL STACK DEVELOPER <span class="c-separator-content">|</span><span class="c-separator"></span> UI+UX DESIGNER</h3>
+                        <p id="myPgraf">Food Lover &bull; Artist &bull; D&D Player &bull; Programmer &bull; Idea Bringer 
                         <span class="c-p-extension">
                             &bull; Fantasy World Explorer <span class="c-p-extension"> </span>&bull; Al Pacino Fan &bull; Weird Sense of Humor &bull; Game Builder
                         </span></p>
