--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
                     </div>
                     <div class="c-projects-body mx-auto d-md-flex">
                         <div class="card c-card " >
-                            <a href="https://cebupetmatch.xyz/" target="_blank">
+<!--                             <a href="https://cebupetmatch.xyz/" target="_blank"> -->
                                 <img class="card-img-top img-fluid" src="./images/projects/website.jpg" alt="Cebu Pet match landing Page" >
-                            </a>
+<!--                             </a> -->
                             <div class="card-body">
                               <h3 class="card-text text-dark">Cebu Pet Match Website</h3>
                               <p class="text-dark mt-1">Developed with PHP, MySql, Javascript, Jquery, HTML and CSS. An Online Pet Search Database.</p>
@@ -197,7 +197,9 @@
                             <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
                         </div>
                         <div class="col-md-6 mt-2 my-2 push-up">
-                            <form action="" class="d-flex flex-column">
+                            <p>email: marescanog@gmail.com</p>
+                            <p>mobile: +63 922 495 1859</p>
+<!--                             <form action="" class="d-flex flex-column">
                                 <div class="form-group">
                                     <label for="full-name-input">Full Name</label>
                                     <input type="text" name="name" id="full-name-input" class="form-control">
@@ -211,7 +213,7 @@
                                     <textarea name="textArea" id="txt-textarea" rows="5" class="form-control"></textarea>
                                 </div>
                                 <button class="btn btn-outline-light btn-block mt-3">Send</button>
-                            </form>
+                            </form> -->
                         </div>
                         <footer   class="p-2 mt-2 c-projects-body mx-auto footer-adjustment my-2 push-up">
                             <hr class="m-0 mb-2 c-hor-rule">
