--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                     </div>
                     <div  id="contact" class="row c-projects-body mx-auto form-height mt-md-3">
                         <div class="col-md-6 mt-2 push-up" >
-                            <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                            <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=IT%20Park&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
                         </div>
                         <div class="col-md-6 mt-2 my-2 push-up">
                             <p>email: marescanog@gmail.com</p>
